attempting to repair wonky footer on mobile devices

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  display: none;
+  // display: none;
   @include media-breakpoint-up(sm) {
     display: block;
     width: 360px;
@@ -31,7 +31,8 @@
 }
 
 .logo-mobile {
-  display: block;
+  // display: block;
+  display: none;
   width: 30px;
   @include media-breakpoint-up(sm) {
     display: none;
